# buildfix

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  GEMINI.md  README.md  ROADMAP.md
.github/: settings.yml
buildfix-adapter-sdk/: CLAUDE.md  Cargo.toml
buildfix-adapter-sdk/src/: harness.rs  lib.rs  receipt_builder.rs
buildfix-adapter-sdk/tests/: adapter_sdk_tests.rs  doc_examples_test.rs
buildfix-artifacts/: CLAUDE.md  Cargo.toml  README.md
buildfix-artifacts/src/: lib.rs
buildfix-artifacts/tests/: artifacts_tests.rs
buildfix-bdd/: CLAUDE.md  Cargo.toml  README.md
buildfix-bdd/features/: ci_integration.feature  duplicate_deps.feature  edition_normalize.feature  explain_drift.feature  license_normalize.feature  msrv_normalize.feature  path_dep_version.feature  plan_and_apply.feature  remove_unused_deps.feature  resolver_v2.feature
buildfix-bdd/src/: lib.rs
buildfix-bdd/tests/: cucumber.rs
buildfix-cli/: CLAUDE.md  Cargo.toml  README.md
buildfix-cli/schemas/: buildfix.plan.v1.json  buildfix.report.v1.json
buildfix-cli/src/: config.rs  explain.rs  lib.rs  main.rs
buildfix-cli/tests/: cli_parsing.rs  explain_drift.rs  install_release_smoke.rs
buildfix-core/: CLAUDE.md  Cargo.toml  README.md
buildfix-core-runtime/: CLAUDE.md  Cargo.toml  README.md
buildfix-core-runtime/src/: adapters.rs  lib.rs  ports.rs  settings.rs
buildfix-core-runtime/tests/: runtime_tests.rs
buildfix-core/src/: adapters.rs  lib.rs  pipeline.rs  ports.rs  settings.rs
buildfix-core/tests/: core_tests.rs  integration_pipeline.rs
buildfix-domain/: CLAUDE.md  Cargo.toml  README.md
buildfix-domain-policy/: CLAUDE.md  Cargo.toml  README.md
buildfix-domain-policy/src/: lib.rs
buildfix-domain-policy/tests/: policy_tests.rs
buildfix-domain/src/: lib.rs  planner.rs  ports.rs
buildfix-domain/src/fixers/: edition.rs  mod.rs  msrv.rs  path_dep_version.rs  resolver_v2.rs  workspace_inheritance.rs
buildfix-domain/tests/: fleet_alignment.rs  golden_fixtures.rs  proptest_ordering.rs
buildfix-edit/: CLAUDE.md  Cargo.toml  README.md
buildfix-edit/src/: error.rs  lib.rs
buildfix-edit/tests/: coverage_branches.rs  preconditions.rs  proptest_toml.rs
buildfix-fixer-api/: CLAUDE.md  Cargo.toml
buildfix-fixer-api/src/: lib.rs
buildfix-fixer-api/tests/: fixer_api_tests.rs
buildfix-fixer-catalog/: CLAUDE.md  Cargo.toml  README.md
buildfix-fixer-catalog/src/: lib.rs
buildfix-fixer-catalog/tests/: catalog_tests.rs
buildfix-fixer-duplicate-deps/: Cargo.toml
buildfix-fixer-duplicate-deps/src/: duplicate_deps.rs  lib.rs
buildfix-fixer-duplicate-deps/tests/: duplicate_deps_tests.rs
buildfix-fixer-edition/: Cargo.toml
buildfix-fixer-edition/src/: edition.rs  lib.rs
buildfix-fixer-edition/tests/: edition_tests.rs
buildfix-fixer-license/: Cargo.toml
buildfix-fixer-license/src/: lib.rs  license.rs
buildfix-fixer-license/tests/: license_tests.rs
buildfix-fixer-msrv/: Cargo.toml
buildfix-fixer-msrv/src/: lib.rs  msrv.rs
buildfix-fixer-msrv/tests/: msrv_tests.rs
buildfix-fixer-path-dep-version/: Cargo.toml
buildfix-fixer-path-dep-version/src/: lib.rs  path_dep_version.rs
buildfix-fixer-path-dep-version/tests/: path_dep_version_tests.rs
buildfix-fixer-remove-unused-deps/: Cargo.toml
buildfix-fixer-remove-unused-deps/src/: lib.rs  remove_unused_deps.rs
buildfix-fixer-remove-unused-deps/tests/: remove_unused_deps_tests.rs
buildfix-fixer-resolver-v2/: Cargo.toml
buildfix-fixer-resolver-v2/src/: lib.rs  resolver_v2.rs
buildfix-fixer-resolver-v2/tests/: resolver_v2_tests.rs
buildfix-fixer-workspace-inheritance/: Cargo.toml
buildfix-hash/: CLAUDE.md  Cargo.toml  README.md
buildfix-hash/src/: lib.rs
buildfix-hash/tests/: hash_tests.rs
buildfix-receipts-cargo-audit/: Cargo.toml
buildfix-receipts-cargo-audit-freeze/: Cargo.toml
buildfix-receipts-cargo-audit-freeze/src/: lib.rs
buildfix-receipts-cargo-audit-freeze/tests/: adapter_test.rs
buildfix-receipts-cargo-audit-freeze/tests/fixtures/: report.json
buildfix-receipts-cargo-audit/src/: lib.rs
buildfix-receipts-cargo-audit/tests/: adapter_test.rs
buildfix-receipts-cargo-audit/tests/fixtures/: report.json
buildfix-receipts-cargo-bloat/: Cargo.toml
buildfix-receipts-cargo-crev/: Cargo.toml
buildfix-receipts-cargo-cyclonedds/: Cargo.toml
buildfix-receipts-cargo-deny/: CLAUDE.md  Cargo.toml  README.md
buildfix-receipts-cargo-deny/src/: lib.rs
buildfix-receipts-cargo-deny/tests/: adapter_test.rs
buildfix-receipts-cargo-deny/tests/fixtures/: report.json
buildfix-receipts-cargo-sec-audit/: Cargo.toml
buildfix-receipts-cargo-sec-audit/src/: lib.rs
buildfix-receipts-cargo-sec-audit/tests/: adapter_test.rs
buildfix-receipts-cargo-sec-audit/tests/fixtures/: report.json
buildfix-receipts-cargo-semver-checks/: Cargo.toml
buildfix-receipts-cargo-semver-checks/src/: lib.rs
buildfix-receipts-cargo-semver-checks/tests/: adapter_test.rs
buildfix-receipts-cargo-semver-checks/tests/fixtures/: report.json
buildfix-receipts-cargo-update/: Cargo.toml
buildfix-receipts-cargo-update/src/: lib.rs
buildfix-receipts-cargo-update/tests/: adapter_test.rs
buildfix-receipts-cargo-update/tests/fixtures/: golden.json  report.json
buildfix-receipts-cargo-warn/: Cargo.toml
buildfix-receipts-cargo-warn/src/: lib.rs
buildfix-receipts-cargo-warn/tests/: adapter_test.rs
buildfix-receipts-cargo-warn/tests/fixtures/: report.json
buildfix-receipts-clippy/: Cargo.toml  README.md
buildfix-receipts-clippy/src/: lib.rs
buildfix-receipts-clippy/tests/: adapter_test.rs
buildfix-receipts-clippy/tests/fixtures/: report.jsonl
buildfix-receipts-depguard/: CLAUDE.md  Cargo.toml
buildfix-receipts-depguard/src/: lib.rs
buildfix-receipts-depguard/tests/: adapter_test.rs
buildfix-receipts-depguard/tests/fixtures/: report.json
buildfix-receipts-sarif/: CLAUDE.md  Cargo.toml  README.md
buildfix-receipts-sarif/src/: lib.rs
buildfix-receipts-sarif/tests/: sarif_adapter_test.rs
buildfix-receipts-sarif/tests/fixtures/: sample.sarif
(+286 files in other folders)
