[workspace]
resolver = "2"
members = [
  "buildfix-types",
  "buildfix-receipts",
  "buildfix-domain",
  "buildfix-edit",
  "buildfix-render",
  "buildfix-cli",
  "buildfix-bdd",
  "xtask",
]
exclude = ["fuzz"]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/EffortlessMetrics/buildfix"
homepage = "https://github.com/EffortlessMetrics/buildfix"

[workspace.dependencies]
anyhow = "1.0"
assert_cmd = "2.0"
camino = { version = "1.1", features = ["serde1"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
cucumber = "0.20"
diffy = "0.3"
fs-err = "2.11"
glob = "0.3"
hex = "0.4"
predicates = "3.1"
pretty_assertions = "1.4"
proptest = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.10"
thiserror = "1.0"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros"] }
toml_edit = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.8", features = ["v4", "v5", "serde"] }
toml = "0.8"
