[workspace]
resolver = "2"
members = [
  "buildfix-types",
  "buildfix-receipts",
  "buildfix-domain",
  "buildfix-edit",
  "buildfix-render",
  "buildfix-core",
  "buildfix-cli",
  "buildfix-bdd",
  "xtask",
]
exclude = ["fuzz"]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/EffortlessMetrics/buildfix"
homepage = "https://github.com/EffortlessMetrics/buildfix"
rust-version = "1.92"

[workspace.dependencies]
anyhow = "1.0.101"
assert_cmd = "2.1.2"
camino = { version = "1.2.2", features = ["serde1"] }
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.57", features = ["derive", "env"] }
cucumber = "0.22.1"
diffy = "0.4.2"
fs-err = "3.2.2"
glob = "0.3.3"
hex = "0.4.3"
predicates = "3.1.3"
pretty_assertions = "1.4.1"
proptest = "1.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
tempfile = "3.24.0"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
toml_edit = "0.23.9"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
uuid = { version = "1.20.0", features = ["v4", "v5", "serde"] }
toml = "0.9.8"
jsonschema = "0.41.0"
