[workspace]
resolver = "2"
members = [
  "buildfix-types",
  "buildfix-receipts",
  "buildfix-adapter-sdk",
  "buildfix-receipts-cargo-crev",
  "buildfix-receipts-cargo-deny",
  "buildfix-receipts-cargo-udeps",
  "buildfix-receipts-cargo-machete",
  "buildfix-receipts-cargo-outdated",
  "buildfix-receipts-cargo-lock",
  "buildfix-receipts-cargo-update",
  "buildfix-receipts-sarif",
  "buildfix-receipts-depguard",
  "buildfix-receipts-rustc-json",
  "buildfix-receipts-clippy",
  "buildfix-receipts-rustfmt",
  "buildfix-receipts-cargo-miri",
  "buildfix-receipts-cargo-spellcheck",
  "buildfix-receipts-cargo-audit",
  "buildfix-receipts-cargo-sec-audit",
  "buildfix-receipts-cargo-tree",
  "buildfix-receipts-cargo-bloat",
  "buildfix-receipts-cargo-llvm-lines",
  "buildfix-receipts-cargo-cyclonedds",
  "buildfix-receipts-cargo-geiger",
  "buildfix-receipts-cargo-semver-checks",
  "buildfix-receipts-cargo-warn",
  "buildfix-receipts-cargo-msrv",
  "buildfix-receipts-cargo-krate",
  "buildfix-receipts-tarpaulin",
  "buildfix-receipts-cargo-audit-freeze",
  "buildfix-receipts-cargo-unused-function",
  "buildfix-fixer-api",
  "buildfix-domain",
  "buildfix-fixer-resolver-v2",
  "buildfix-fixer-path-dep-version",
  "buildfix-fixer-workspace-inheritance",
  "buildfix-fixer-duplicate-deps",
  "buildfix-fixer-remove-unused-deps",
  "buildfix-fixer-msrv",
  "buildfix-fixer-edition",
  "buildfix-fixer-license",
  "buildfix-edit",
  "buildfix-domain-policy",
  "buildfix-hash",
  "buildfix-report",
  "buildfix-artifacts",
  "buildfix-render",
  "buildfix-core",
  "buildfix-core-runtime",
  "buildfix-fixer-catalog",
  "buildfix-cli",
  "buildfix-bdd",
  "xtask",
]
exclude = ["fuzz"]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Receipt-driven planner and applicator for Cargo workspace hygiene."
repository = "https://github.com/EffortlessMetrics/buildfix"
homepage = "https://github.com/EffortlessMetrics/buildfix"
keywords = ["cargo", "workspace", "repair", "toml", "automation"]
categories = ["development-tools"]
rust-version = "1.92"
readme = "README.md"

[workspace.dependencies]
anyhow = "1.0.101"
assert_cmd = "2.1.2"
camino = { version = "1.2.2", features = ["serde1"] }
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.57", features = ["derive", "env"] }
cucumber = "0.22.1"
diffy = "0.4.2"
fs-err = "3.2.2"
glob = "0.3.3"
hex = "0.4.3"
predicates = "3.1.3"
pretty_assertions = "1.4.1"
proptest = "1.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
tempfile = "3.24.0"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
toml_edit = "0.23.9"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
uuid = { version = "1.20.0", features = ["v4", "v5", "serde"] }
toml = "0.9.8"
jsonschema = "0.41.0"
