[package]
name = "buildfix-adapter-sdk"
version = "0.2.0"
publish = ["crates-io"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "SDK for building intake adapters that convert sensor outputs to buildfix receipts"
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["cargo", "adapter", "sensor", "receipt", "intake"]
categories = ["development-tools"]

[dependencies]
buildfix-types = { version = "0.2.0", path = "../buildfix-types" }
camino.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
tempfile.workspace = true
