[package]
name = "buildfix-artifacts"
version = "0.2.0"
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Artifact rendering and file writing for buildfix pipeline outputs."
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["cargo", "buildfix", "artifacts", "report", "writer"]
categories = ["development-tools"]

[dependencies]
anyhow.workspace = true
buildfix-render = { path = "../buildfix-render" }
buildfix-types = { path = "../buildfix-types" }
camino.workspace = true
serde_json.workspace = true
