[package]
name = "buildfix-artifacts"
version = "0.2.0"
publish = ["crates-io"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Artifact rendering and file writing for buildfix pipeline outputs."
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["cargo", "buildfix", "artifacts", "report", "writer"]
categories = ["development-tools"]

[dependencies]
anyhow.workspace = true
buildfix-render = { version = "0.2.0", path = "../buildfix-render" }
buildfix-types = { version = "0.2.0", path = "../buildfix-types" }
camino.workspace = true
serde_json.workspace = true
