[package]
name = "buildfix-bdd"
version = "0.1.0"
publish = false
edition.workspace = true
license.workspace = true

[[test]]
name = "cucumber"
harness = false

[dependencies]
anyhow.workspace = true
camino.workspace = true
fs-err.workspace = true
assert_cmd.workspace = true
cucumber.workspace = true
tempfile.workspace = true
serde_json.workspace = true
tokio.workspace = true

buildfix-types = { path = "../buildfix-types" }
