[package]
name = "buildfix-bdd"
version = "0.2.0"
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Cucumber acceptance suite for buildfix plan/apply workflows"
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["bdd", "cucumber", "cargo", "acceptance", "workflow"]
categories = ["development-tools"]

[[test]]
name = "cucumber"
harness = false

[dependencies]
anyhow.workspace = true
camino.workspace = true
fs-err.workspace = true
assert_cmd.workspace = true
cucumber.workspace = true
tempfile.workspace = true
serde_json.workspace = true
tokio.workspace = true

buildfix-types = { path = "../buildfix-types" }
