[package]
name = "buildfix"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "buildfix"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
camino.workspace = true
chrono.workspace = true
clap.workspace = true
fs-err.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

buildfix-domain = { path = "../buildfix-domain" }
buildfix-edit = { path = "../buildfix-edit" }
buildfix-receipts = { path = "../buildfix-receipts" }
buildfix-render = { path = "../buildfix-render" }
buildfix-types = { path = "../buildfix-types" }

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
pretty_assertions.workspace = true
tempfile.workspace = true
