[package]
name = "buildfix"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Receipt-driven repair tool for Cargo workspace hygiene"
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["cargo", "workspace", "repair", "cli", "toml"]
categories = ["command-line-utilities", "development-tools"]
include = [
  "src/**",
  "schemas/**",
  "README.md",
  "Cargo.toml",
]

[[bin]]
name = "buildfix"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
camino.workspace = true
clap.workspace = true
fs-err.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
jsonschema = { version = "0.18", features = ["draft202012"] }

buildfix-core = { path = "../buildfix-core" }
buildfix-receipts = { path = "../buildfix-receipts" }
buildfix-types = { path = "../buildfix-types" }

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
pretty_assertions.workspace = true
tempfile.workspace = true
