[package]
name = "buildfix"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "CLI for receipt-driven Cargo workspace hygiene repairs"
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["cargo", "workspace", "repair", "cli", "hygiene"]
categories = ["command-line-utilities", "development-tools"]
include = [
  "src/**",
  "README.md",
  "Cargo.toml",
]

[[bin]]
name = "buildfix"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
camino.workspace = true
clap.workspace = true
fs-err.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
jsonschema.workspace = true

buildfix-core = { version = "0.2.0", path = "../buildfix-core" }
buildfix-receipts = { version = "0.2.0", path = "../buildfix-receipts" }
buildfix-types = { version = "0.2.0", path = "../buildfix-types" }

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
pretty_assertions.workspace = true
tempfile.workspace = true
