[package]
name = "buildfix-core-runtime"
version = "0.2.0"
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core runtime adapters and settings for buildfix embeddings."
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["cargo", "workflow", "automation", "editing", "adapters"]
categories = ["development-tools"]

[dependencies]
anyhow.workspace = true
camino.workspace = true
tracing.workspace = true
buildfix-edit = { path = "../buildfix-edit" }
buildfix-receipts = { path = "../buildfix-receipts" }

[dev-dependencies]
pretty_assertions.workspace = true
tempfile.workspace = true
fs-err.workspace = true

[features]
default = ["fs", "git", "memory"]
fs = []
git = []
memory = []
