[package]
name = "buildfix-core"
version = "0.2.0"
publish = ["crates-io"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Embeddable plan/apply pipeline for buildfix (clap-free, port-driven)"
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["cargo", "workspace", "repair", "pipeline", "library"]
categories = ["development-tools"]

[dependencies]
anyhow.workspace = true
camino.workspace = true
chrono.workspace = true
buildfix-hash = { version = "0.2.0", path = "../buildfix-hash" }
buildfix-core-runtime = { version = "0.2.0", path = "../buildfix-core-runtime" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
toml_edit.workspace = true
uuid.workspace = true

buildfix-domain = { version = "0.2.0", path = "../buildfix-domain" }
buildfix-edit = { version = "0.2.0", path = "../buildfix-edit" }
buildfix-artifacts = { version = "0.2.0", path = "../buildfix-artifacts", optional = true }
buildfix-receipts = { version = "0.2.0", path = "../buildfix-receipts" }
buildfix-report = { version = "0.2.0", path = "../buildfix-report", optional = true }
buildfix-types = { version = "0.3.0", path = "../buildfix-types" }

[dev-dependencies]
pretty_assertions.workspace = true
tempfile.workspace = true

[features]
default = ["reporting", "artifact-writer"]
reporting = ["dep:buildfix-report"]
artifact-writer = ["dep:buildfix-artifacts"]
