[package]
name = "buildfix-domain-policy"
version = "0.2.0"
publish = ["crates-io"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Reusable policy and op-determinism helpers for buildfix planning."
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["buildfix", "policy", "planner", "determinism"]
categories = ["development-tools"]

[dependencies]
anyhow.workspace = true
buildfix-fixer-api = { version = "0.2.0", path = "../buildfix-fixer-api" }
buildfix-types = { version = "0.3.0", path = "../buildfix-types" }
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
uuid.workspace = true

[dev-dependencies]
serde_json.workspace = true
