[package]
name = "buildfix-domain"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Core planning logic for buildfix repair tool"
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["cargo", "workspace", "planner", "repair"]
categories = ["development-tools"]

[dependencies]
anyhow.workspace = true
camino.workspace = true
fs-err.workspace = true
glob.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml_edit.workspace = true
tracing.workspace = true
uuid.workspace = true

buildfix-types = { path = "../buildfix-types" }
buildfix-receipts = { path = "../buildfix-receipts" }

[dev-dependencies]
buildfix-edit = { path = "../buildfix-edit" }
fs-err.workspace = true
pretty_assertions.workspace = true
proptest.workspace = true
serde_json.workspace = true
tempfile.workspace = true
