[package]
name = "buildfix-domain"
version = "0.3.1"
publish = ["crates-io"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Deterministic planning engine for buildfix repair operations"
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["cargo", "workspace", "planner", "deterministic", "repair"]
categories = ["development-tools"]

[dependencies]
anyhow.workspace = true
camino.workspace = true
fs-err.workspace = true
buildfix-fixer-catalog = { version = "0.3.1", path = "../buildfix-fixer-catalog", default-features = false }
buildfix-fixer-api = { version = "0.3.1", path = "../buildfix-fixer-api" }
buildfix-domain-policy = { version = "0.3.1", path = "../buildfix-domain-policy" }
buildfix-fixer-duplicate-deps = { version = "0.3.1", path = "../buildfix-fixer-duplicate-deps", optional = true }
buildfix-fixer-edition = { version = "0.3.1", path = "../buildfix-fixer-edition", optional = true }
buildfix-fixer-license = { version = "0.3.1", path = "../buildfix-fixer-license", optional = true }
buildfix-fixer-msrv = { version = "0.3.1", path = "../buildfix-fixer-msrv", optional = true }
buildfix-fixer-path-dep-version = { version = "0.3.1", path = "../buildfix-fixer-path-dep-version", optional = true }
buildfix-fixer-remove-unused-deps = { version = "0.3.1", path = "../buildfix-fixer-remove-unused-deps", optional = true }
buildfix-fixer-resolver-v2 = { version = "0.3.1", path = "../buildfix-fixer-resolver-v2", optional = true }
buildfix-fixer-workspace-inheritance = { version = "0.3.1", path = "../buildfix-fixer-workspace-inheritance", optional = true }
serde.workspace = true
serde_json.workspace = true
toml_edit.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true

buildfix-types = { version = "0.3.0", path = "../buildfix-types" }
buildfix-receipts = { version = "0.3.1", path = "../buildfix-receipts" }

[dev-dependencies]
buildfix-edit = { path = "../buildfix-edit" }
buildfix-render = { path = "../buildfix-render" }
fs-err.workspace = true
pretty_assertions.workspace = true
proptest.workspace = true
serde_json.workspace = true
tempfile.workspace = true
toml.workspace = true

[features]
default = [
    "fixer-resolver-v2",
    "fixer-path-dep-version",
    "fixer-workspace-inheritance",
    "fixer-duplicate-deps",
    "fixer-remove-unused-deps",
    "fixer-msrv",
    "fixer-edition",
    "fixer-license",
]
fixer-resolver-v2 = [
    "dep:buildfix-fixer-resolver-v2",
    "buildfix-fixer-catalog/fixer-resolver-v2",
]
fixer-path-dep-version = [
    "dep:buildfix-fixer-path-dep-version",
    "buildfix-fixer-catalog/fixer-path-dep-version",
]
fixer-workspace-inheritance = [
    "dep:buildfix-fixer-workspace-inheritance",
    "buildfix-fixer-catalog/fixer-workspace-inheritance",
]
fixer-duplicate-deps = [
    "dep:buildfix-fixer-duplicate-deps",
    "buildfix-fixer-catalog/fixer-duplicate-deps",
]
fixer-remove-unused-deps = [
    "dep:buildfix-fixer-remove-unused-deps",
    "buildfix-fixer-catalog/fixer-remove-unused-deps",
]
fixer-msrv = ["dep:buildfix-fixer-msrv", "buildfix-fixer-catalog/fixer-msrv"]
fixer-edition = [
    "dep:buildfix-fixer-edition",
    "buildfix-fixer-catalog/fixer-edition",
]
fixer-license = [
    "dep:buildfix-fixer-license",
    "buildfix-fixer-catalog/fixer-license",
]
