[package]
name = "buildfix-edit"
version = "0.1.0"
publish = false
edition.workspace = true
license.workspace = true
description = "TOML editing engine for Cargo manifest repairs"
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["cargo", "toml", "edit", "manifest"]
categories = ["development-tools"]

[dependencies]
anyhow.workspace = true
camino.workspace = true
diffy.workspace = true
fs-err.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
toml_edit.workspace = true
tracing.workspace = true
uuid.workspace = true

buildfix-types = { path = "../buildfix-types" }

[dev-dependencies]
pretty_assertions.workspace = true
tempfile.workspace = true
proptest.workspace = true
