[package]
name = "buildfix-edit"
version = "0.3.1"
publish = ["crates-io"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Policy-aware edit/apply engine for buildfix plan operations"
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["cargo", "toml", "patch", "preconditions", "repair"]
categories = ["development-tools"]

[dependencies]
anyhow.workspace = true
camino.workspace = true
diffy.workspace = true
fs-err.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
toml_edit.workspace = true
tracing.workspace = true
uuid.workspace = true

buildfix-types = { version = "0.3.0", path = "../buildfix-types" }
buildfix-hash = { version = "0.3.1", path = "../buildfix-hash" }

[dev-dependencies]
hex.workspace = true
pretty_assertions.workspace = true
sha2.workspace = true
tempfile.workspace = true
proptest.workspace = true
