[package]
name = "buildfix-fixer-catalog"
version = "0.2.0"
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Canonical built-in fixer metadata for buildfix feature flagging and registration."
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["cargo", "buildfix", "registry", "fixer", "metadata"]
categories = ["development-tools"]

[dependencies]
buildfix-types = { path = "../buildfix-types" }

[features]
default = [
    "fixer-resolver-v2",
    "fixer-path-dep-version",
    "fixer-workspace-inheritance",
    "fixer-duplicate-deps",
    "fixer-remove-unused-deps",
    "fixer-msrv",
    "fixer-edition",
    "fixer-license",
]
fixer-resolver-v2 = []
fixer-path-dep-version = []
fixer-workspace-inheritance = []
fixer-duplicate-deps = []
fixer-remove-unused-deps = []
fixer-msrv = []
fixer-edition = []
fixer-license = []
