[package]
name = "buildfix-fixer-path-dep-version"
version = "0.2.0"
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Path dependency version fixer implementation."
repository.workspace = true
homepage.workspace = true
categories = ["development-tools"]
keywords = ["cargo", "fixer", "buildfix", "path-dependency"]

[dependencies]
anyhow.workspace = true
camino.workspace = true
toml_edit.workspace = true
serde.workspace = true
serde_json.workspace = true
buildfix-fixer-api = { path = "../buildfix-fixer-api" }
buildfix-types = { path = "../buildfix-types" }
buildfix-receipts = { path = "../buildfix-receipts" }

