[package]
name = "buildfix-fixer-resolver-v2"
version = "0.2.0"
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Resolver-v2 fixer implementation."
repository.workspace = true
homepage.workspace = true
categories = ["development-tools"]
keywords = ["cargo", "fixer", "buildfix", "resolver-v2"]

[dependencies]
anyhow.workspace = true
camino.workspace = true
toml_edit.workspace = true
buildfix-fixer-api = { path = "../buildfix-fixer-api" }
buildfix-types = { path = "../buildfix-types" }
buildfix-receipts = { path = "../buildfix-receipts" }

