[package]
name = "buildfix-fixer-resolver-v2"
version = "0.3.1"
publish = ["crates-io"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Resolver-v2 fixer implementation."
repository.workspace = true
homepage.workspace = true
readme = false
categories = ["development-tools"]
keywords = ["cargo", "fixer", "buildfix", "resolver-v2"]

[dependencies]
anyhow.workspace = true
camino.workspace = true
toml_edit.workspace = true
buildfix-fixer-api = { version = "0.3.1", path = "../buildfix-fixer-api" }
buildfix-types = { version = "0.3.0", path = "../buildfix-types" }
buildfix-receipts = { version = "0.3.1", path = "../buildfix-receipts" }

