[package]
name = "buildfix-hash"
version = "0.3.1"
publish = ["crates-io"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Small hashing primitives used across buildfix internals."
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["hash", "sha256", "hex", "checksum", "utility"]
categories = ["development-tools"]

[dependencies]
hex.workspace = true
sha2.workspace = true
