[package]
name = "buildfix-receipts-cargo-audit-freeze"
version = "0.3.1"
publish = ["crates-io"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Adapter that parses cargo-audit-freeze JSON output and converts it to buildfix receipts."
repository.workspace = true
homepage.workspace = true
readme = false
keywords = ["cargo", "adapter", "cargo-audit-freeze", "receipt", "json"]
categories = ["development-tools"]

[dependencies]
anyhow.workspace = true
buildfix-types = { version = "0.3.0", path = "../buildfix-types" }
buildfix-adapter-sdk = { version = "0.3.1", path = "../buildfix-adapter-sdk" }
camino.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
tempfile.workspace = true
