[package]
name = "buildfix-receipts-cargo-deny"
version = "0.3.1"
publish = ["crates-io"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Adapter that parses cargo-deny JSON output and converts it to buildfix receipts."
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["cargo", "adapter", "cargo-deny", "receipt"]
categories = ["development-tools"]

[dependencies]
anyhow.workspace = true
camino.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
buildfix-types = { version = "0.3.0", path = "../buildfix-types" }
buildfix-adapter-sdk = { version = "0.3.1", path = "../buildfix-adapter-sdk" }

[dev-dependencies]
pretty_assertions.workspace = true
tempfile.workspace = true
